# AI-Stock-Analysis-Assistant

./: .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env  Dockerfile  env.example  main.py  pyproject.toml
docs/: deploy.md  run-local.md
frontend/: .dockerignore  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css
scripts/: deploy.sh  run-local.sh
